syntax = "proto3";

package dcl;

message BigInt {
    string value = 1;
}
  
message Items {
    repeated Item items = 1;
}

message Item {
  string id = 1;
  string collection = 2;
  int64 blockchain_id = 3;
  string creator = 4;
  ItemType item_type = 5;
  BigInt total_supply = 6;
  BigInt max_supply = 7;
  string rarity = 8;
  BigInt creation_fee = 9;
  BigInt available = 10;
  BigInt price = 11;
  string beneficiary = 12;
  string content_hash = 13;
  string uri = 14;
  string image = 15;
  repeated string minters = 16;
  repeated string managers = 17;
  Metadata metadata = 18;
  string raw_metadata = 19;
  string urn = 20;
  uint64 created_at = 21;
  uint64 updated_at = 22;
  uint64 reviewed_at = 23;
  uint64 sold_at = 24;
  uint64 first_listed_at = 25;
  bool search_is_store_minter = 26;
}

message Collections {
    repeated Collection collections = 1;
}

message Collection {
    string address = 1;
    string name = 2;
    string symbol = 3;
    string creator = 4;
    string owner = 5;
    bool is_completed = 6;
    bool is_approved = 7;
    bool is_editable = 8;
    repeated string minters = 9;
    repeated string managers = 10;
    string urn = 11;
    uint64 created_at = 12;
    uint64 reviewed_at = 13;
    optional uint64 first_listed_at = 14;
    bool search_is_store_minter = 15;
}

message NFTs {
    repeated NFT nfts = 1;
}
  
message NFT {
    string beneficiary = 1;
    BigInt tokenId = 2;
    string itemId = 3;
    BigInt issuedId = 4;
    string collection_address = 5;
    string created_at = 6;
    string updated_at = 7;
}
  

message Orders {
    repeated Order orders = 1;
}
  
message Order {
    string id = 1;
    string marketplace_address = 2;
    string nft_id = 3;
    BigInt token_id = 4;
    string tx_hash = 5;
    string owner = 6;
    string buyer = 7;
    BigInt price = 8;
    string status = 9;
    uint64 block_number = 10;
    BigInt expires_at = 11;
    uint64 updated_at = 12;
}


message Metadata {
  string id = 1;
  ItemType item_type = 2;
  Wearable wearable = 3;
  Emote emote = 4;
}

enum ItemType {
  UNDEFINED = 0;
  WEARABLE_V1 = 1;
  WEARABLE_V2 = 2;
  SMART_WEARABLE_V1 = 3;
  EMOTE_V1 = 4;
}

message Wearable {
  string id = 1;
  string name = 2;
  string description = 3;
  string collection = 4;
  WearableCategory category = 5;
  WearableRarity rarity = 6;
  repeated WearableBodyShape body_shapes = 7;
}

message Emote {
  string id = 1;
  string name = 2;
  string description = 3;
  string collection = 4;
  EmoteCategory category = 5;
  bool loop = 6;
  WearableRarity rarity = 7;
  repeated WearableBodyShape body_shapes = 8;
}

enum WearableCategory {
  EYEBROWS = 0;
  EYES = 1;
  FACIAL_HAIR = 2;
  HAIR = 3;
  MOUTH = 4;
  UPPER_BODY = 5;
  LOWER_BODY = 6;
  FEET = 7;
  EARRING = 8;
  EYEWEAR = 9;
  HAT = 10;
  HELMET = 11;
  MASK = 12;
  TIARA = 13;
  TOP_HEAD = 14;
  SKIN = 15;
}

enum EmoteCategory {
  DANCE = 0;
  STUNT = 1;
  GREETINGS = 2;
  FUN = 3;
  POSES = 4;
  REACTIONS = 5;
  HORROR = 6;
  MISCELLANEOUS = 7;
}

enum WearableRarity {
  COMMON = 0;
  UNCOMMON = 1;
  RARE = 2;
  EPIC = 3;
  LEGENDARY = 4;
  MYTHIC = 5;
  UNIQUE = 6;
}

enum WearableBodyShape {
  BASE_FEMALE = 0;
  BASE_MALE = 1;
}
